[package]
name = "fluxora_stream"
version = "0.1.0"
edition = "2021"
description = "Fluxora USDC streaming contract for Stellar Soroban"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "21.7.7"

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }